finish the user login part.
